unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/f5_Monthly_Productive_Utilization__c.field-meta.xml
<CustomField>
    <fullName>f5_Monthly_Productive_Utilization__c</fullName>
    <formula>IF(ISPICKVAL(pse__Time_Period_Type__c, "Month"),((pse__Historical_Billable_Hours__c + pse__Historical_Credited_Hours__c)/173), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>f5 Monthly Productive Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>