unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/f5_Yearly_Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>f5_Yearly_Billable_Utilization__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF(ISPICKVAL(pse__Time_Period_Type__c, "Year"),pse__Historical_Billable_Hours__c/2080, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>f5 Yearly Billable Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>