unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/Resource_Region__c.field-meta.xml
<CustomField>
    <fullName>Resource_Region__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Resource__r.pse__Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Region</label>
    <type>Text</type>
</CustomField>