unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <formula>TEXT(pse__Resource__r.pse__Resource_Role__c)</formula>
    <label>Resource Role</label>
    <type>Text</type>
</CustomField>